--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -29,7 +29,7 @@ html {
 body {
   background-color: #eee;
   color: #464646;
-  font-family: "Gotham Book", sans-serif;
+  font-family: 'Gotham Book', sans-serif;
   text-rendering: optimizeLegibility;
   font-size: 1.6rem;
   -webkit-font-smoothing: antialiased;
@@ -44,7 +44,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Gotham", sans-serif;
+  font-family: 'Gotham', sans-serif;
 }
 
 h2 {
@@ -57,7 +57,7 @@ h3 {
 
 h4 {
   font-size: 2rem;
-  font-family: "Gotham Book", sans-serif;
+  font-family: 'Gotham Book', sans-serif;
   font-weight: 600;
 }
 
@@ -65,16 +65,13 @@ p {
   font-family: 1.8rem;
 }
 
-
 /* START Utils */
 
 .text-unset {
   text-transform: unset !important;
 }
 
-
 /* END Utils */
-
 
 /* START Block */
 
@@ -142,9 +139,7 @@ p {
   flex: 0 0 calc(100vh - 12rem);
 }
 
-
 /* END Block */
-
 
 /* START Status */
 
@@ -197,7 +192,7 @@ p {
   -webkit-flex: 50%;
   -ms-flex: 50%;
   flex: 50%;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   vertical-align: middle;
 }
 
@@ -210,7 +205,7 @@ p {
   -webkit-border-radius: 50%;
   border-radius: 50%;
   display: inline-block;
-  font-family: "Gotham", san-serif;
+  font-family: 'Gotham', san-serif;
   font-weight: 500;
   height: 2.4rem;
   line-height: 2.4rem;
@@ -219,9 +214,7 @@ p {
   width: 2.4rem;
 }
 
-
 /* END Status */
-
 
 /* START InSpace */
 
@@ -233,33 +226,41 @@ p {
 
 .avatar__item {
   display: inline-block;
-  margin: 0 .8rem;
+  margin: 0 0.8rem;
 }
 
 .avatar__item-img {
-  border: .25rem solid #fff;
+  border: 0.25rem solid #fff;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   width: 4.2rem;
 }
 
-
 /* END InSpace */
-
 
 /* START Slack */
 
 .slack--wrap {
   background-color: #fff;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
-.slack__wrap {
-  display: flex;
+.slack__item a:hover {
+  text-decoration: none;
+}
+
+.slack__item-wrap {
   padding: 1rem 0;
 }
 
+.slack__item-wrap::after {
+  clear: both;
+  content: '';
+  display: block;
+}
+
 .slack__gutter {
+  float: left;
   padding-right: 1.5rem;
   text-align: right;
   width: 10rem;
@@ -272,13 +273,51 @@ p {
   width: 4.8rem;
 }
 
-.slac__avatar-img {
+.slack__avatar-img {
+  border-radius: 0.3rem;
   height: 100%;
   width: 100%;
 }
 
-/* END Slack */
+.slack__message-header {
+  line-height: 1.5rem;
+  margin: 1rem 0 -0.5rem;
+}
 
+.slack__message-sender {
+  color: #464646;
+  font-weight: 700;
+}
+
+.slack__message-sender-link {
+  color: #464646;
+}
+
+.slack__message-sender-link:hover {
+  color: #464646;
+}
+
+.slack__timestamp-label {
+  margin-left: 0.5rem;
+}
+
+.slack__message-content {
+  margin: -1rem 2rem 0 10rem;
+}
+
+.slack__message-content::before {
+  content: '';
+  display: block;
+  padding-top: 0.1rem;
+}
+
+.slack__message-body {
+  margin: 1rem 0 -0.4rem;
+  width: 100%;
+  word-wrap: break-word;
+}
+
+/* END Slack */
 
 /* START News */
 
@@ -354,7 +393,7 @@ p {
 }
 
 .news__day {
-  font-family: "Gotham", sans-serif;
+  font-family: 'Gotham', sans-serif;
   font-size: 4rem;
   line-height: 1;
 }
@@ -384,5 +423,56 @@ p {
   /* box-shadow: 0 .1rem .2rem 0 rgba(0, 0, 0, 0.2); */
 }
 
-
 /* END News */
+
+/* START Emoji */
+
+span.emoji {
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: baseline;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  width: 2.4rem;
+  height: 2.4rem;
+  background-size: 2.4rem;
+  background-repeat: no-repeat;
+  text-indent: -9999px;
+  background-position: 50%, 50%;
+  background-size: contain;
+}
+
+span.emoji-sizer {
+  line-height: 1;
+  font-size: 1.6rem;
+  margin: -0.2rem 0;
+}
+
+span.emoji-outer {
+  display: -moz-inline-box;
+  display: inline-block;
+  *display: inline;
+  height: 2.4rem;
+  vertical-align: middle;
+  width: 2.4rem;
+}
+
+span.emoji-inner {
+  display: -moz-inline-box;
+  display: inline-block;
+  text-indent: -9999px;
+  width: 100%;
+  height: 100%;
+  vertical-align: baseline;
+  *vertical-align: auto;
+  *zoom: 1;
+}
+
+img.emoji {
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+/* END Emoji */
